--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,6 +1,10 @@
 name: Linting
 
-on: {pull_request}
+on:
+  workflow_run:
+    workflows: ["Codacy Security Scan"]
+    types:
+      - completed
 
 jobs:
   linting:
