--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,11 +50,7 @@ jobs:
         run: cp -R jsdocsgenerated/* docs
       - name: Commit changes
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "Github Action"
-          git add .
-          git commit -m "Generated JSDocs"
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          git config --global user.email "action@github.com"
+          git config --global user.name "Github Action"
+          git commit -am "Generated JSDocs"
+          git push
