--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "postversion": "git push --follow-tags"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.24.5",
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
     "@babel/preset-react": "^7.24.1",
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/jest-dom": "^6.4.5",
     "babel-jest": "^29.7.0",
     "eslint": "^7.32.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdoc": "^4.0.3",
     "puppeteer": "^22.8.0"
   },
@@ -36,6 +40,7 @@
     "jest": "^29.7.0"
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
     }
