--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "url": "https://github.com/cse110-sp24-group18/cse110-sp24-group18"
   },
   "dependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jsdom": "^24.1.0"
   },
   "jest": {
     "testEnvironment": "jsdom",
