--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "lint:check": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "npx jest",
+    "test:unit": "npx jest assets/scripts/tests/unit --env=jsdom",
+    "test:e2e": "npx jest assets/scripts/tests/e2e",
     "docs": "git fetch; git checkout documentation; jsdoc src/ -d jsdocsgenerated; git config --local user.email 'action@github.com'; git config --local user.name 'Github Action'; git add -A; git commit -m 'Generated JSDocs'; git push",
     "serve": "echo 'TODO: Add your serve command here",
     "start": "npm run serve",
@@ -41,7 +42,6 @@
     "jsdom": "^24.1.0"
   },
   "jest": {
-    "testEnvironment": "jsdom",
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
     }
