Testing changes in Workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,6 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Unit Test
-        run: npm test
+        run: npm run test:unit
+      - name: E2E Test
+        run: npm run test:e2e
