Revert "Large Commit with a lot of UI fixes, widget functionality inclusion, and HTML changes"

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,4 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Unit Test
-        run: npm run test:unit
-      - name: E2E Test
-        run: npm run test:e2e
+        run: npm test
