--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,5 +31,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Install Dependencies
         run: npm install
+      - name: Set up Xvfb
+        uses: GabrielBB/xvfb-action@v1.6
       - name: Unit Test
         run: npm test
