--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "postversion": "git push --follow-tags"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.1",
     "babel-jest": "^29.7.0",
     "eslint": "^7.32.0",
+    "http-server": "^14.1.1",
     "jsdoc": "^4.0.3",
     "nyc": "^15.1.0",
     "puppeteer": "^22.8.0"
-    "http-server": "^14.1.1"
   },
   "engines": {
     "node": ">=14"
