Added jest environment jsdom
Installed additional jest environment so that the E2E testing can work
on actions.

--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "url": "https://github.com/cse110-sp24-group18/cse110-sp24-group18"
   },
   "dependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   },
   "jest": {
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
-    }
+    },
+    "testEnvironment": "jest-environment-jsdom"
   }
 }
