--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
     },
-    "testEnvironment": "jest-environment-jsdom",
-    "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"]
+    "testEnvironment": "jest-environment-jsdom"
   }
 }
