--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "babel-jest": "^29.7.0",
     "eslint": "^7.32.0",
     "http-server": "^14.1.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdoc": "^4.0.3",
     "nyc": "^15.1.0",
-    "puppeteer": "^22.8.0"
+    "puppeteer": "^22.10.0"
   },
   "engines": {
     "node": ">=14"
@@ -34,10 +36,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/cse110-sp24-group18/cse110-sp24-group18"
-  },
-  "dependencies": {
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
   },
   "jest": {
     "transform": {
