--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdoc": "^4.0.3",
+    "jsdom": "^24.1.0",
     "nyc": "^15.1.0",
     "puppeteer": "^22.10.0"
   },
