--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
-        with:
-          node-version: '20'
+        # with:
+        #   node-version: '14'
 
       - name: Install dependencies
         run: npm install
